AC_INIT([bombegman],[0.0],[],[],[http://bombegman.googlecode.com/])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

AM_PROG_LIBTOOL

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])


CXXFLAGS="$CXXFLAGS"
CFLAGS="$CFLAGS"
CPPFLAGS="$CPPFLAGS"
LIBS="$LIBS"

AC_OUTPUT
