bin_PROGRAMS = bombegman
noinst_HEADERS = 
bombegman_SOURCES = server-core.cpp main.cpp misc.cpp gfx.cpp sfx.cpp main.h

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g
